Added github pages for Vue CLI

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
   <title>Calculator</title>
-  
+
   <!-- Launch Icon (180x180px or larger) -->
   <link rel="apple-touch-icon" href="/static/favicon.png">
   
@@ -15,6 +15,7 @@
   
   <!-- Enable standalone (full-screen) mode -->
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   
   <!-- Status bar appearance (has no effect unless standalone mode is enabled) -->
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
